# srcds-exporter

./: BUILD.bazel  MODULE.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  srcds_collector.go  srcds_stats.go  srcds_stats_test.go
.github/workflows/: bazel.yml  push.yml  test.yml
cmd/srcds_exporter/: BUILD.bazel  main.go
testdata/: stats_csgo_active.txt  stats_csgo_inactive.txt  status_csgo_active.txt  status_csgo_inactive.txt
