load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:prefix github.com/kleinpa/srcds_exporter
gazelle(name = "gazelle")

go_library(
    name = "srcds_collector",
    srcs = [
        "srcds_collector.go",
        "srcds_stats.go",
    ],
    importpath = "github.com/kleinpa/srcds-exporter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorcon_rcon//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)

go_test(
    name = "srcds_stats_test",
    srcs = ["srcds_stats_test.go"],
    data = glob(["testdata/**"]),
    embed = [":srcds_collector"],
)

pkg_tar(
    name = "tar",
    srcs = ["//cmd/srcds_exporter"],
)

oci_image(
    name = "image",
    base = "@srcds_exporter_distroless_base",
    entrypoint = ["/srcds_exporter"],
    tars = [":tar"],
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/kleinpa/srcds-exporter",
)
