module(name = "srcds-exporter")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "protobuf", version = "33.2")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.1.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_prometheus_client_golang",
    "com_github_gorcon_rcon",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "srcds_exporter_distroless_base",
    digest = "sha256:0c8eac8ea42a167255d03c3ba6dfad2989c15427ed93d16c53ef9706ea4691df",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
use_repo(oci, "srcds_exporter_distroless_base", "srcds_exporter_distroless_base_linux_amd64")
