load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "srcds_exporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/kleinpa/srcds_exporter/cmd/srcds_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//:srcds_collector",
        "@com_github_gorcon_rcon//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "srcds_exporter",
    embed = [":srcds_exporter_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":srcds_exporter"],
)

oci_image(
    name = "image",
    base = "@srcds_exporter_distroless_base",
    entrypoint = ["/srcds_exporter"],
    tars = [":tar"],
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/kleinpa/srcds-exporter",
)

build_test(
    name = "build_test",
    targets = [
        ":srcds_exporter",
    ],
)
