load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "srcds_exporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/kleinpa/srcds_exporter/cmd/srcds_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//:srcds_collector",
        "@com_github_gorcon_rcon//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "srcds_exporter",
    embed = [":srcds_exporter_lib"],
    visibility = ["//visibility:public"],
)

build_test(
    name = "build_test",
    targets = [
        ":srcds_exporter",
    ],
)
